@@ -1,6 +1,10 @@
 1.0.1 (pending)
 --------------------------------
 
+- new method: gateway.hasreceiver() returns True 
+  if the gateway is still receive-active. remote_status
+  now only carries information about remote execution status.
+
 - have popen-gateways use imports instead of source-strings,
   also improves debugging/tracebacks, as a side effect
   popen-gateway startup can be substantially faster (>30%)
